# Forger

./: .gitignore  README.md  drake.md  pyproject.toml
forge/: __init__.py  cli.py  diff.py  fixtures.py  pipeline_runner.py  profile.py  repl.py  server.py  validate.py  watch.py  ws_server.py
forge/core/: pipeline.py  plugin.py  schema.py
forge/generator/: engine.py  fields.py  inference.py  llm.py  prompt.py  stream.py
forge/io/: db.py  readers.py  writers.py
forge/modes/: anonymize.py  compress.py  convert.py  enrich.py  generate.py  repair.py  scale.py  stress.py  synthesize.py
forge/utils/: helpers.py
tests/: test_core.py  test_generator.py  test_io.py  test_modes.py  test_new_features.py  test_server.py  test_stream.py
